classDiagram
    Client  --> EventManager: contacts 
    EventManager --> Hotelier: talks to 
    EventManager --> Florist: talks to
    EventManager --> Caterer: talks to
    EventManager --> Musician: talks to

    class Client{
    }
    class EventManager{
    }
    class Hotelier{
    }
    class Florist{
    }
    class Caterer{
    }
    class Musician{
    }